Fixed a clipping issue with the header.

--- a/src/layouts/index.css
+++ b/src/layouts/index.css
@@ -10,19 +10,19 @@ body {
   height: 100%;
   background-color: #fff;
   font-size: 10px;
-  overflow-x: hidden;
 }
 
 body:before {
   content: '';
   position: absolute;
-  top: -10rem;
-  left: -20rem;
-  right: -20rem;
-  height: 24rem;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 15.5rem;
   width: 100%;
   z-index: -1;
-  transform: rotate(-1.5deg);
+  -webkit-clip-path: polygon(0 0, 100% 0, 100% 82%, 0 100%);
+  clip-path: polygon(0 0, 100% 0, 100% 82%, 0 100%);
   background: rgba(75,208,232,1);
   background: -moz-radial-gradient(left, circle cover, rgba(75,208,232,1) 0%, rgba(32,124,229,1) 100%);
   background: -webkit-gradient(radial, center left, 0px, center center, 100%, color-stop(0%, rgba(75,208,232,1)), color-stop(100%, rgba(32,124,229,1)));
@@ -35,7 +35,7 @@ body:before {
 
 @media (max-width: 768px) {
   body:before {
-    height: 20rem;
+    height: 11rem;
   }
 }
 
